[tool.poetry]
name = "pan-os-ansible"
version = "2.21.3"
description = "Ansible collection for Palo Alto Networks PAN-OS"
authors = ["Palo Alto Networks <devrel@paloaltonetworks.com>"]
license = "Apache-2.0"
keywords = ["panos", "pan-os-ansible"]
readme = "README.md"
homepage = "https://github.com/PaloAltoNetworks/pan-os-ansible"
repository = "https://github.com/PaloAltoNetworks/pan-os-ansible"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pan-python = "^0.17.0"
pan-os-python = "^1.8.0"
xmltodict = "^0.12.0"
aiohttp = "^3.8.4"
dpath = "^2.1.5"
panos-upgrade-assurance = "^0.3"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pytest = "*" 
coverage = "4.5.4"
pylint = "2.13.*"
pytest-xdist = "*" 
pytest-mock = "*"
voluptuous = "*" 
yamllint = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
#ansible-doc-extractor = "*"
rstcheck = "*"
six = "*"
pycodestyle = "*"
#ansible-core = "~2"
# from requirements.txt
certifi = "2021.5.30"
chardet = "3.0.4"
idna = "2.8"
requests = "^2.22.0"

[tool.poetry.group.ansible-ee]
optional = true

[tool.poetry.group.ansible-ee.dependencies]
ansible-builder = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"